# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "heston-model"
version = "0.1.0"
description = "Quantitative finance model"
authors = ["Akram Zaki <akramzaki019@gmail.com>"]
packages = [
    { include = "heston_model", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
matplotlib = "*"
yfinance = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
